--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cds-mbaas",
+  "name": "cds-mobile",
   "version": "0.0.0",
   "description": "A mobile backend shim to Cloudant",
   "main": "index.js",
@@ -14,6 +14,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "cloudant": "^1.4.0"
+    "basic-auth": "^1.0.3",
+    "cloudant": "^1.4.0",
+    "express": "^4.13.3"
   }
 }
