--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "basic-auth": "^1.0.3",
+    "body-parser": "^1.14.2",
     "cloudant": "^1.4.0",
     "express": "^4.13.3"
   }
