--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
     "cloudant": "^1.4.0",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "underscore": "^1.8.3"
   }
 }
