--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.14.2",
     "cloudant": "^1.4.0",
     "express": "^4.13.3",
+    "request": "^2.67.0",
     "underscore": "^1.8.3"
   }
 }
