Major refactor to follow Express standard layout.
Each route is now in the lib/routes dir.

'index.js' is no longer the entry point. To start the application, run

% PORT=8001 npm start

Other changes:

Bugfix in delete which crashed if not given a rev.

Killed the deprecation warning from bodyParser()

Ammending README.md to reflect changes in start process.

Harmonised the function definitions to use the function name(x, y, z) {} style.

Removed "debug" module, as it served no real purpose.

--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "cds-mobile",
   "version": "0.0.0",
   "description": "A mobile backend shim to Cloudant",
-  "main": "index.js",
-  "scripts": {
-    "test": "npm test"
-  },
+  "author": "",
   "keywords": [
     "backend",
     "node",
     "cloudant"
   ],
-  "author": "",
   "license": "MIT",
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
