--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "jshint": "jshint -c .jshintrc lib/",
+    "test": "npm run jshint"
   },
   "dependencies": {
     "basic-auth": "^1.0.3",
@@ -19,5 +21,8 @@
     "express": "^4.13.3",
     "request": "^2.67.0",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "jshint": "2.8.0"
   }
 }
