--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,17 @@ git:
   depth: 30
 sudo:
   false
+env:
+  global: 
+    - secure: "eVzRjyoXwjfO1OT2Z8HQNJCYn5A8Mys3fz3dwuKQAcLXRlNG0U2Nl09F1oyGOPumV0M3Hi3mbY9i2JbyDQqkcxQYtvy88y/YXl/MPAXK0wCFG/kwS9BnOMIP0ZsI1BMhhSlxk78VqtNIhhoj2Xcvby14N1+SPeBIderA72GSQ3E="
+    - secure: "BIaCDWCcKYe8lBz9xlYNYtb1UbJDhKo9zsA4afX0vWK8XsauToHVECDXt7XjXHA13ZzeFALx3+V078qLJh04AB7g4YYM0gqLaNudBFNi3WvLVZHlmTRRtbBnSADLR3iC3oCV+pd4aitPSStIZTLQCrzjTD89VC2VNKbt7VzdXuw="
+    - secure: "KuExYRB5p7+t9JfAXjg/aDZWOj9qCS9uf7Q+YrgtnHtyYfibdGuFuhLxdwsb/RDZKEzsc7vI+LXKWj2NG8SRHp7MbMwuunvon+Ihrt+UdpUMkDWlmVS7wxEHY26VTKAWaOL9jisAjYam9K9ts+I81kA9KBeRbGoR5UJfB4OfZ9c="
+    - PORT=8080
+    - MBAAS_DATABASE_NAME='mbaas'
 script:
-  npm run test
+  npm run test && mocha
 branches:
   only:
   - master
+  - mocha-tests
+
