--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "jshint": "2.8.0"
+    "jshint": "2.8.0",
+    "mocha": "2.3.4",
+    "supertest": "1.1.0"
   }
 }
