Make database name configurable
Fixes #17

--- a/run.sh.example
+++ b/run.sh.example
@@ -4,5 +4,6 @@ export ACCOUNT='example'
 export API_KEY='sdlfksdfkjskdfjsdklf'
 export API_PASSWORD='sdkfsldfjsd98fs980dfs09'
 export PORT=3000
+export MBAAS_DATABASE_NAME='mbaas'
 
 node index.js
