--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "test": "npm run jshint"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
     "cloudant": "^1.4.0",
+    "events": "^1.1.0",
     "express": "^4.13.3",
     "request": "^2.67.0",
     "underscore": "^1.8.3"
