--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "body-parser": "^1.14.2",
     "cfenv": "^1.0.3",
     "cloudant": "^1.4.1",
+    "chance": "^0.8.0",
     "events": "^1.1.0",
     "express": "^4.13.3",
+    "morgan": "^1.6.1",
+    "pouchdb": "^5.2.1",
     "request": "^2.67.0",
     "underscore": "^1.8.3"
   },
