--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async": "^1.5.2",
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
+    "cfenv": "^1.0.3",
     "cloudant": "^1.4.1",
     "events": "^1.1.0",
     "express": "^4.13.3",
