--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "jshint": "jshint -c .jshintrc lib/",
-    "test": "npm run jshint"
+    "mocha": "./node_modules/.bin/mocha test",
+    "test": "npm run jshint; npm run mocha"
   },
   "dependencies": {
     "async": "^1.5.2",
