use COUCH_HOST environment variable
replaces the ACCOUNT/API_KEY/API_PASSWORD environment variables
with a single COUCH_HOST variable

--- a/run.sh.example
+++ b/run.sh.example
@@ -1,8 +1,6 @@
 #!/bin/bash
 
-export ACCOUNT='example'
-export API_KEY='sdlfksdfkjskdfjsdklf'
-export API_PASSWORD='sdkfsldfjsd98fs980dfs09'
+export COUCH_HOST='https://sdlfksdfkjskdfjsdklf:sdkfsldfjsd98fs980dfs09@example.cloudant.com'
 export PORT=3000
 export MBAAS_DATABASE_NAME='mbaas'
 
