--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "events": "^1.1.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
-    "pouchdb": "^5.2.1",
     "request": "^2.67.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
     "jshint": "2.4.0",
     "mocha": "2.3.4",
-    "supertest": "1.1.0"
+    "supertest": "1.1.0",
+    "pouchdb": "^5.2.1"
   }
 }
