--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "jshint": "jshint -c .jshintrc lib/",
-    "mocha": "./node_modules/.bin/mocha test",
+    "mocha": "./node_modules/.bin/mocha test -t 20000",
     "test": "npm run jshint; npm run mocha"
   },
   "dependencies": {
