--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
     "cfenv": "^1.0.3",
-    "cloudant": "^1.4.1",
     "chance": "^0.8.0",
+    "cloudant": "^1.4.1",
+    "cors": "^2.7.1",
     "events": "^1.1.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
