--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "npm run jshint; npm run mocha"
   },
   "dependencies": {
+    "JSONStream": "^1.0.7",
     "async": "^1.5.2",
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
