Beginnnings of a helper script to create curl commands for testing

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,6 +3,7 @@
     "async": "^1.5.2",
     "chance": "^0.8.0",
     "dotenv": "^2.0.0",
-    "pouchdb": "^5.2.0"
+    "pouchdb": "^5.2.0",
+    "vorpal": "^1.9.0"
   }
 }
