--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cfenv": "^1.0.3",
     "chance": "^1.0.3",
     "cloudant": "^1.4.1",
+    "compression": "^1.6.2",
     "events": "^1.1.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
