--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "body-parser": "^1.14.2",
     "cfenv": "^1.0.3",
     "chance": "^1.0.3",
-    "cloudant": "^1.4.1",
+    "cloudant": "git@github.com:cloudant/nodejs-cloudant.git",
     "compression": "^1.6.2",
     "events": "^1.1.0",
     "express": "^4.13.3",
