--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "events": "^1.1.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
-    "request": "^2.67.0",
-    "underscore": "^1.8.3"
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "jshint": "2.9.2",
