--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^1.5.2",
     "basic-auth": "^1.0.3",
     "body-parser": "^1.14.2",
+    "cf-deployment-tracker-client": "^0.1.1",
     "cfenv": "^1.0.3",
     "cloudant": "git@github.com:cloudant/nodejs-cloudant.git",
     "compression": "^1.6.2",
