added contributors without emails

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "contributors": [
     "Stefan Kruger <stefan.kruger@gmail.com>",
     "Will Holley <willholley@gmail.com>",
-    "Glynn Bird <glynn.bird@gmail.com>"
+    "Glynn Bird <glynn.bird@gmail.com>",
+    "Tom Blench",
+    "Simon Metson",
+    "Mike Rhodes"
   ],
   "keywords": [
     "backend",
