--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "compression": "^1.6.2",
     "events": "^1.1.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-http": "^0.3.0",
     "underscore": "^1.8.3"
   },
