--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.13.0",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-http": "^0.3.0",
     "underscore": "^1.8.3"
