--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.10",
     "passport-google-oauth": "^1.0.0",
     "passport-http": "^0.3.0",
     "underscore": "^1.8.3"
